--- a/ad-l3-1.0/index.html
+++ b/ad-l3-1.0/index.html
@@ -7,11 +7,27 @@
   <title>replit</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 
 <body>
     <main class="container">
+        <div id="a">
+
+        </div>
+        <div id="b">
+
+        </div>
+        <div id="c">
+
+        </div>
+        <div id="d">
+
+        </div>
+        <div id="e">
+
+        </div>
         <div class="row">
             <div class="col">
                 <h1>ABC's Through Pictures!</h1>
@@ -382,6 +398,7 @@
         <hr>
         <hr>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
