--- a/ad-l3-1.0/index.html
+++ b/ad-l3-1.0/index.html
@@ -14,7 +14,14 @@
 <body>
     <main class="container">
         <div id="a">
-
+            <button type="button" class="btn btn-primary">Primary</button>
+            <button type="button" class="btn btn-secondary">Secondary</button>
+            <button type="button" class="btn btn-success">Success</button>
+            <button type="button" class="btn btn-danger">Danger</button>
+            <button type="button" class="btn btn-warning">Warning</button>
+            <button type="button" class="btn btn-info">Info</button>
+            <button type="button" class="btn btn-light">Light</button>
+            <button type="button" class="btn btn-dark">Dark</button>
         </div>
         <div id="b">
 
